Fix #3139